<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shelf Tools</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="enter_job">Enter a Job Number</string>
    <string name="type_of_shelving">Type of Shelving You Have:</string>
    <string name="add_shelving">Shelving Lengths Needed:</string>
    <string name="quantity">QUANTITY</string>
    <string name="lenght">LENGTH</string>
    <string name="email">Email Cuts</string>
    <string name="calculate">Calculate Cuts</string>
    <string name="save">Save</string>
    <string name="what_you_need">What You Will Need:</string>
    <string name="how_to_cut">How To Cut It: </string>
    <string name="switch_imperial">Switch to Imperial</string>
    <string name="sections">Sections of Shelving</string>
    <string name="excess">Excess Shelving: </string>
    <string name="waste">waste</string>
    <string name="downrod">Cut Out Downrod Section</string>
    <string name="job">Job Number: </string>
    <string name="delete">Delete</string>
    <string name="clear_data_message">Are you sure you want to clear the data?</string>
    <string name="quit_app_message">Are you you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_data_message">Please enter at least one cut.</string>
    <string name="overflow_warning_message">The maximum allowed number of total pieces is 1000.</string>
	<string name="length_max_warning_message">The specified length does not fall within the expected range.</string>
	<string name="email_closet_job_number">ClosetMaid Job: </string>
	<string name="email_downrod">downrod</string>
	<string name="email_total_excess_shelving">Total Excess Shelving: </string>
	<string name="shelf">Shelf</string>
	<string name="home">Home</string>
	<string name="shelf_location">SHELF LOCATION</string>
	<string name="shelf_length">SHELF LENGTH</string>
	<string name="hardware">Hardware</string>
	<string name="hardware_quantity">Quantity</string>
	<string name="hardware_calculate">Calculate</string>
	<string name="small_end_cap">Small End Caps</string>
	<string name="support_bracket">Support Brackets</string>
	<string name="wall_brackets">Wall Brackets</string>
	<string name="wall_clips">Wall Clips</string>
	<string name="large_end_caps">Large End Caps</string>
	<string name="email_list">Email List</string>
	<string name="email_hardware">Hardware Calculator</string>
	<string name="email_shelving_cut_calculator">Shelving Cut Calculator</string>
	<string name="hardware_enter_data_message">Please enter at least one shelf.</string>
	<string name="delete">Delete Row</string>
	<string name="preparing_email">Preparing e-mail content...</string>
    <string name="hardware_quantity_exceded">Maximum quantity exceeded</string>


</resources>