<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tss="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >

        <com.tss.views.TSSView
            android:id="@+id/view_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp5_s"
            android:layout_marginTop="@dimen/dp5_s"
            android:background="@drawable/logo_closed_hardaware"
            tss:tss_scaleMode="byWidth"
            tss:tss_width="0.59" />

        <com.tss.views.TSSView
            android:id="@+id/pct_shelf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/art_hardware"
            tss:tss_scaleMode="byWidth"
            tss:tss_width="0.39"
            tss:tss_x="0.6"
            tss:tss_y="0.04" />

        <TextView
            android:id="@+id/txt_what_you_need"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pct_shelf"
            android:layout_marginLeft="@dimen/dp40_s"
            android:gravity="left"
            android:text="@string/what_you_need"
            android:textColor="@color/black"
            android:textSize="@dimen/dp18_s"
            android:textStyle="bold" />

		<LinearLayout 
		    android:id="@+id/lay_header"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/txt_what_you_need"
		    android:layout_marginLeft="@dimen/dp40_s"
		    android:layout_marginRight="@dimen/dp40_s"
		    android:layout_marginTop="@dimen/dp20_s"
		    android:orientation="horizontal"
		    android:background="@color/application_gray">
		    
		    <TextView android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/hardware"
		        android:gravity="left"
		        android:paddingLeft="@dimen/dp20_s"
		        android:paddingTop="@dimen/dp5_s"
		        android:paddingBottom="@dimen/dp5_s"
		        android:textSize="@dimen/dp18_s"
		        android:layout_weight="0.5"
		        android:textColor="@color/black"
		        />
		    
		    <TextView android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="right"
		        android:paddingRight="@dimen/dp20_s"
		        android:paddingTop="@dimen/dp5_s"
		        android:paddingBottom="@dimen/dp5_s"
		        android:textSize="@dimen/dp18_s"
		        android:text="@string/hardware_quantity"
		        android:textColor="@color/black"
		        android:layout_weight="0.5"/>
		    
		</LinearLayout>

        <TableLayout 
            android:id="@+id/tbl_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lay_header"
            android:layout_above="@+id/btn_email"
            android:layout_marginLeft="@dimen/dp40_s"
		    android:layout_marginRight="@dimen/dp40_s"
		    android:layout_marginTop="@dimen/dp20_s"
		    android:layout_marginBottom="@dimen/dp20_s"
		    android:divider="@color/red"
		    android:background="@drawable/hardware_result_table_bg"
		    android:weightSum="5"
		    >
		    
		    <include layout="@layout/hardware_table_row"
		        android:layout_weight="1"/>
            
		   <View android:layout_width="match_parent"
		       android:layout_height="2px"
		       android:background="@color/red"/>
           
		    <include layout="@layout/hardware_table_row"
		        android:layout_weight="1"/>
		    
		      <View android:layout_width="match_parent"
		       android:layout_height="2px"
		       android:background="@color/red"/>
           
		    <include layout="@layout/hardware_table_row"
		        android:layout_weight="1"/>
		    
		      <View android:layout_width="match_parent"
		       android:layout_height="2px"
		       android:background="@color/red"/>
		     
           
		    <include layout="@layout/hardware_table_row"
		        android:layout_weight="1"/>
		    
		      <View android:layout_width="match_parent"
		       android:layout_height="2px"
		       android:background="@color/red"/>
           
		    <include layout="@layout/hardware_table_row"
		        android:layout_weight="1"/>
		    
            
        </TableLayout>
        
        <com.tss.views.TSSButton
            android:id="@+id/btn_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/tbl_results"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp60_s"
            android:layout_marginRight="@dimen/dp5_s"
            android:background="@drawable/btn_switch_selector"
            android:onClick="switchMetric"
            android:paddingBottom="@dimen/dp4_s"
            android:paddingLeft="@dimen/dp2_s"
            android:paddingRight="@dimen/dp2_s"
            android:paddingTop="@dimen/dp4_s"
            android:text="@string/email_list"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dp13_s"
            tss:tss_width="0.33" />

    </RelativeLayout>

</RelativeLayout>
